# django_microsoft_auth

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
microsoft_auth/: apps.py  client.py  conf.py  context_processors.py  views.py
microsoft_auth/static/microsoft/js/: login.js
microsoft_auth/templates/microsoft/: admin_login.html  auth_callback.html
tests/: __init__.py  test_client.py  test_zconstance.py
