[tool.poetry]
name = "django-microsoft-auth"
version = "3.0.1"
description = "Simple app to enable Microsoft Account, Office 365 and Xbox Live authentcation as a Django authentcation backend"
authors = [
    "Christopher Bailey <cbailey@mort.is>",
    "Chris Culhane <cfculhane@gmail.com>",
]
license = "MIT"
readme = "README.rst"
packages = [{ include = "microsoft_auth" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
]
[tool.poetry.urls]
"Documentation" = "https://django-microsoft-auth.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = "^3.8,<4.0"
django = ">=3.2,<4.0"
pyjwt = { version = "<3.0", extras = ["crypto"] }
requests-oauthlib = "*"
requests = "*"
djangoql = { version = "^0.17.1", optional = true }
django-hosts = { version = "~5.1.0", optional = true }

[tool.poetry.extras]
djangql = ["djangoql"]
django-hosts = ["django-hosts"]

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = "^1.7.5" }
black = "^23.3.0"
coverage = "^7.2.7"
doc8 = "^1.1.1"
ruff = "^0.0.272"
furo = "^2023.5.20"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
pytest-rich = "^0.1.1"
pytest = "^7.3.2"
sphinx = "^7.0.1"
pre-commit = "^3.3.3"


[tool.bandit]
exclude_dirs = [
    "tests/*",
    ".tox/*",
    ".git/*",
]

[tool.black]
line-length = 120
target-versions = 'py38'
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.coverage.run]
omit = [
    "microsoft_auth/migrations/*.py",
]

[tool.flake8]
exclude = ".eggs, .git, .tox, build"
ignore = "C812, W503, C816, C815, B008"
max-line-length = 88

[tool.ruff]
line-length = 120
target-version = "py38"
src = ["microsoft_auth"]
select = ["E", "F", "B", "I"] # 'B" enables flake8-bugbear
ignore-init-module-imports = true # To stop it removeing __init__ imports with --fix
show-fixes = true
unfixable = [
    "B007", # Disable autofix for unused loop variable as it's ugly - force users to fix it themselves
]
#ignore = ["C812", "W503", "C816", "C815", "B008"]

[tool.ruff.isort]
known-first-party = ["microsoft_auth"]


[tool.ruff.per-file-ignores]
# Ignore line-length in migrations
"*/migrations/*" = ["E501"]
"*/__init__.py" = ["F401"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.site.settings"
addopts = "--rich --cov-config .coveragerc --cov-branch --cov-append --cov-report term-missing --color=yes --no-cov-on-fail --cov=microsoft_auth --durations=10 --maxfail=5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
